--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li>liefern informationen &uuml;ber en Entwickler</li>
             <li>k&ouml;nnen Code deaktivieren</li>
             <li>Hilft zum Debuggen</li>
+            <li>Mit &lt;!--<small>hier steht der Kommentar</small>--> kann ein Kommentar erstellt werden</li> <!-- Kommentar -->
         </ul>
 
 <h2 id="Überschriften"><a href="#Übung">&Uuml;berschriften</a></h2>
@@ -208,4 +209,5 @@ Alles Infos von meinem Lehrer. <br>
 <a href="https://drbi.de.cool/start.html" target="_blank">Link zu seiner Webseite.</a> 
     </body>
 </html>
+
 
